# lazyscribe-onnx

./: .pre-commit-config.yaml  CHANGELOG.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: edgetest.yml  publish-package.yml  test-package.yml
lazyscribe_onnx/: __init__.py
tests/: smoke_test.py  test_onnx_handler.py
tests/test_lazyscribe_integration/: test_onnx.py
