[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.8.0,<=0.9.5" ]

[project]
name = "lazyscribe-onnx"
version = "0.1.2"
description = "ONNX model artifact handling for lazyscribe"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT license" }
authors = [ { name = "Akshay Gupta", email = "akgcodes@gmail.com" } ]
requires-python = ">=3.10.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "attrs<=26.1.0,>=21.2.0",
    "lazyscribe!=3,<=2.2.1,>=2.0.0",
    "onnx<=1.21.0,>=1.12.0",
    "python-slugify<=8.0.4,>=5.0.0",
]
optional-dependencies.build = [ "commitizen", "uv" ]
optional-dependencies.dev = [
    "lazyscribe-onnx[build]",
    "lazyscribe-onnx[qa]",
    "lazyscribe-onnx[tests]"
]
optional-dependencies.qa = [
    "edgetest>=2026.5.0",
    "mypy",
    "pre-commit",
    "pre-commit-uv",
    "pyproject-fmt",
    "ruff",
    "types-python-slugify",
]
optional-dependencies.tests = [ "pytest", "pytest-cov", "time-machine" ]
urls.Documentation = "https://github.com/lazyscribe/lazyscribe-onnx"
urls.Repository = "https://github.com/lazyscribe/lazyscribe-onnx"
entry-points."lazyscribe.artifact_type".onnx = "lazyscribe_onnx:ONNXArtifact"

[tool.uv]
build-backend.module-name = "lazyscribe_onnx"
build-backend.module-root = ""

[tool.ruff]
target-version = "py310"
lint.select = [
    "B",      # flake8-bugbear
    "C",      # flake8-comprehensions
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "LOG",    # flake8-logging
    "RUF",    # Ruff errors
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "TID252", # flake8-tidy-imports ban relative imports
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
lint.ignore = [
    "C901", # Function/method is too complex. (Add back in later.)
    "E501", # Line too long. Using formatter instead.
]
lint.per-file-ignores."**/{tests,docs}/*" = [ "ARG", "D", "E402", "F841" ]
lint.per-file-ignores."__init__.py" = [ "E402" ]
lint.per-file-ignores."tutorials/*" = [ "D", "T201" ]
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.pydocstyle.convention = "numpy"
lint.preview = true

[tool.pyproject-fmt]
column_width = 88
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true
check_untyped_defs = true

[tool.commitizen]
version_provider = "uv"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
    "lazyscribe_onnx/_meta.py:__version__",
]

[tool.edgetest]
exclude_newer = "3 days"

[[tool.edgetest.env]]
name = "core"
extras = [ "tests" ]
upgrade = [ "attrs", "lazyscribe", "onnx", "python-slugify" ]
command = "pytest tests"
